@@ -12,7 +12,7 @@ Select a colour and click OK. The colour's name (or hex number if it has not
 got a name) will be output in square brackets after this text. If you click
 Transparent the output is [None]. If you click Cancel the program terminates.
 __EOT__
-
+#'
 my @lang = qw( de en fr ) ;
 
 my $Win = MainWindow->new ;
@@ -22,6 +22,7 @@ while( 1 ) {
     my $col_dialog = $Win->ColourChooser( 
                         -language => $lang[int( rand 3 )],
                         -colour   => $colour, 
+                        -showhex  => 1,
                         ) ;
     $colour        = $col_dialog->Show ;
     print STDERR "[$colour]\n" ;
